frontend/Kubernets/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: production

spec:
  type: ClusterIP

  selector:
    app: react-app

  ports:
  - name: frontend
    port: 80
    targetPort: 8080
    protocol: TCP
